--- a/Models/Diffusion/2025.02.26_MegaTTS3.md
+++ b/Models/Diffusion/2025.02.26_MegaTTS3.md
@@ -40,9 +40,9 @@ mainstream systems still suffer from issues related to speech-text alignment mod
 (2) predefined alignment-based models suffer from naturalness constraints of forced alignments.
 
 This paper introduces ***MegaTTS3***, a TTS system featuring an innovative sparse alignment algorithm that guides the latent diffusion transformer (DiT).
-Specifically, we provide sparse alignment boundaries to MegaTTS 3 to reduce the difficulty of alignment without limiting the search space, thereby achieving high naturalness.
+Specifically, we provide sparse alignment boundaries to ***MegaTTS3*** to reduce the difficulty of alignment without limiting the search space, thereby achieving high naturalness.
 Moreover, we employ a multi-condition classifier-free guidance strategy for accent intensity adjustment and adopt the piecewise rectified flow technique to accelerate the generation process.
-Experiments demonstrate that MegaTTS 3 achieves state-of-the-art zero-shot TTS speech quality and supports highly flexible control over accent intensity.
+Experiments demonstrate that ***MegaTTS3*** achieves state-of-the-art zero-shot TTS speech quality and supports highly flexible control over accent intensity.
 Notably, our system can generate high-quality one-minute speech with only 8 sampling steps.
 Audio samples are available at https://sditdemo.github.io/sditdemo/.
 
@@ -62,19 +62,23 @@ To generate high-quality speech with clear and expressive pronunciation, a TTS m
 However, from the perspective of speech-text alignment, current solutions suffer from the following issues:
 
 - \textbf{Models with implicit speech-text alignment} achieve the soft alignment paths through attention mechanisms~\citep{wang2023neural,chen2024vall,du2024cosyvoice}.
-These models can be categorized into: 1) autoregressive codec language models (AR LM), which are inefficient and lack robustness.
-The lengthy discrete speech codes, which typically require a bit rate of 1.5 kbps~\citep{kumar2024high,wu2024towards}, impose a significant burden on these autoregressive language models; 2) diffusion-based models without explicit duration modeling~\citep{lee2024ditto,eskimez2024e2,lovelace2023simple,gao2023e3,cambara2024mapache,yang2024simplespeech,yang2024simplespeech2}, which significantly speeds up the speech generation process.
+These models can be categorized into:
+(1) autoregressive codec language models (AR LM), which are inefficient and lack robustness.
+The lengthy discrete speech codes, which typically require a bit rate of 1.5 kbps~\citep{kumar2024high,wu2024towards}, impose a significant burden on these autoregressive language models;
+(2) diffusion-based models without explicit duration modeling~\citep{lee2024ditto,eskimez2024e2,lovelace2023simple,gao2023e3,cambara2024mapache,yang2024simplespeech,yang2024simplespeech2}, which significantly speeds up the speech generation process.
 However, when compared with methods that adopt forced alignment, these models exhibit a decline in speech intelligibility.
 Besides, these methods cannot provide fine-grained control over the duration of specific pronunciations and can only adjust the overall speech rate.
 
 - \textbf{Predefined alignment-based methods} have prosodic naturalness constraints of forced alignments.
 During training, alignment paths~\citep{ren2020fastspeech,kim2020glow} are directly introduced into their models~\citep{le2023Voicebox,shen2023naturalspeech,ju2024naturalspeech} to reduce the complexity of text-to-speech generation, which achieves higher intelligibility.
-Nevertheless, they suffer from the following limitations: 1) predefined alignments constrain the model's search space to produce more natural-sounding speech~\citep{anastassiou2024seed,chen2024vall}; 2) the overall naturalness is highly dependent on the performance of duration models.
+Nevertheless, they suffer from the following limitations:
+(1) predefined alignments constrain the model's search space to produce more natural-sounding speech~\citep{anastassiou2024seed,chen2024vall};
+(2) the overall naturalness is highly dependent on the performance of duration models.
 
 Intuitively, we can integrate the two aforementioned diffusion-based methods to pursue optimal performance.
-To be specific, we propose a novel sparse speech-text alignment strategy to enhance the latent diffusion transformer (DiT), termed MegaTTS 3.
+To be specific, we propose a novel sparse speech-text alignment strategy to enhance the latent diffusion transformer (DiT), termed ***MegaTTS3***.
 In our approach, phoneme tokens are sparsely distributed within the corresponding forced alignment regions to provide coarse pronunciation information that is then refined by the latent DiT model.
-Experimental results demonstrate that MegaTTS 3 achieves nearly state-of-the-art speech intelligibility and speaker similarity on the LibriSpeech test-clean set~\citep{panayotov2015librispeech} with only 8 sampling steps, while also exhibiting high speech naturalness.
+Experimental results demonstrate that ***MegaTTS3*** achieves nearly state-of-the-art speech intelligibility and speaker similarity on the LibriSpeech test-clean set~\citep{panayotov2015librispeech} with only 8 sampling steps, while also exhibiting high speech naturalness.
 The main contributions of this work are summarized as follows:
 
 - We design a sparse alignment enhanced latent diffusion transformer model, which effectively integrates the strengths of the two aforementioned speech-text alignment approaches.
@@ -84,7 +88,7 @@ Notably, our model also demonstrates greater robustness to duration prediction e
 Furthermore, we discover that the text guidance scale can also be used to modulate the intensity of personal accents, offering a new direction for enhancing speech expressiveness.
 
 - We successfully reduce the inference steps from 25 to 8 with the piecewise rectified flow (PeRFLow) technique, achieving highly efficient zero-shot TTS with minimal quality degradation.
-We also visualize the attention matrices across various layers of MegaTTS 3 and obtain insightful findings in Appendix~\ref{app:vis_diff_attn}.
+We also visualize the attention matrices across various layers of ***MegaTTS3*** and obtain insightful findings in Appendix~\ref{app:vis_diff_attn}.
 
 </td><td>
 
@@ -100,7 +104,8 @@ Zero-shot TTS~\citep{casanova2022yourtts,wang2023neural,zhang2023speak,shen2023n
 Among them, neural codec language models~\citep{chen2024vall} are the first that can autoregressively synthesize speech that rivals human recordings in naturalness and expressiveness.
 However, they still face several challenges, such as the lossy compression in discrete audio tokenization and the time-consuming nature of autoregressive generation.
 To address these issues, some subsequent works explore solutions based on continuous vectors and non-autoregressive diffusion models~\citep{shen2023naturalspeech,le2023Voicebox,lee2024ditto,eskimez2024e2,yang2024simplespeech,yang2024simplespeech2,chen2024f5}.
-These works can be categorized into two main types: 1) the first type directly models speech-text alignments using attention mechanisms without explicit duration modeling~\citep{lee2024ditto,eskimez2024e2}.
+These works can be categorized into two main types:
+The first type directly models speech-text alignments using attention mechanisms without explicit duration modeling~\citep{lee2024ditto,eskimez2024e2}.
 Although these models perform well in terms of generation speed and quality, their robustness, especially in challenging cases, still requires enhancement.
 The second category~\citep{shen2023naturalspeech,le2023Voicebox} utilizes predefined alignments to simplify alignment learning.
 However, the search space of the generated speech of these models is limited by predefined alignments.
@@ -127,8 +132,8 @@ In addition, we describe the CFG mechanism used in zero-shot TTS systems in Appe
 
 <table><tr><td width="50%">
 
-This section introduces MegaTTS 3.
-To begin with, we describe the architecture design of MegaTTS 3.
+This section introduces ***MegaTTS3***.
+To begin with, we describe the architecture design of ***MegaTTS3***.
 Then, we provide detailed explanations of the sparse alignment mechanism, the piecewise rectified flow acceleration technique, and the multi-condition classifier-free guidance strategy.
 
 </td><td>
@@ -160,30 +165,32 @@ The latent diffusion transformer is used to predict speech that matches the styl
 Given the random variables $Z_{0}$ sampled from a standard Gaussian distribution $\pi_{0}$ and $Z_{1}$ sampled from the latent space given by the speech compression model with data density $\pi_{1}$, we adopt the rectified flow~\citet{liu2022flow} to implicitly learn the transport map $T$, which yields $Z_{1} := T(Z_{0})$.
 The rectified flow learns $T$ by constructing the following ordinary differential equation (ODE):
 $$
-    \mathrm{d}Z_t = v(Z_t, t)\,\mathrm{d}t,
+\mathrm{d}Z_t = v(Z_t, t)\,\mathrm{d}t,
 $$
+
 where $t\in[0,1]$ denotes time and $v$ is the drift force.
 Equation~\ref{eq:1} converts $Z_{0}$ from $\pi_{0}$ to $Z_{1}$ from $\pi_{1}$.
 The drift force $v$ drives the flow to follow the direction $(Z_{1}-Z_{0})$.
 The latent diffusion transformer,  parameterized by $\theta$, can be trained by estimating $v(Z_{t}, t)$ with $v_{\theta}(Z_{t}, t)$ through minimizing the least squares loss with respect to the line directions $(Z_{1}-Z_{0})$:
 $$
-    \min_v \int_0^1 \mathbb{E} \left[ \| (Z_1 - Z_0) - v(Z_t, t) \|^2 \right] \, \mathrm{d}t.
+\min_v \int_0^1 \mathbb{E} \left[ \| (Z_1 - Z_0) - v(Z_t, t) \|^2 \right] \, \mathrm{d}t.
 $$
-We use the standard transformer block from LLAMA~\citep{dubey2024llama} as the basic structure for MegaTTS 3 and adopt the Rotary Position Embedding (RoPE)~\citep{su2024roformer} as the positional embedding.
+
+We use the standard transformer block from LLAMA~\citep{dubey2024llama} as the basic structure for ***MegaTTS3*** and adopt the Rotary Position Embedding (RoPE)~\citep{su2024roformer} as the positional embedding.
 During training, we randomly divide the latent vector sequence into a prompt region $z_{prompt}$ and a masked target region $z_{target}$, with the proportion of $z_{prompt}$ being $\gamma \sim U(0.1, 0.9)$.
 We use $v_{\theta}$ to predict the masked target vector $\hat{z}_{target}$ conditioned on $z_{prompt}$ and the phoneme embedding $p$, denoted as $v_{\theta}(\hat{z}_{target}|z_{prompt}, p)$.
 The loss is calculated using only the masked region $z_{target}$.
-MegaTTS 3 learns the average pronunciation from $p$ and the specific characteristics such as timbre, accent, and prosody of the corresponding speaker from $z_{prompt}$.
+***MegaTTS3*** learns the average pronunciation from $p$ and the specific characteristics such as timbre, accent, and prosody of the corresponding speaker from $z_{prompt}$.
 
 </td><td>
 
 </td></tr></table>
 
-### Sparse Alignment Enhanced Latent Diffusion Transformer (MegaTTS 3)
+### Sparse Alignment Enhanced Latent Diffusion Transformer (MegaTTS3)
 
 <table><tr><td width="50%">
 
-In this subsection, we describe the sparse alignment strategy as the foundation of MegaTTS 3, followed by the piecewise rectified flow and multi-condition CFG strategies to further enhance MegaTTS 3's capacity.
+In this subsection, we describe the sparse alignment strategy as the foundation of ***MegaTTS3***, followed by the piecewise rectified flow and multi-condition CFG strategies to further enhance ***MegaTTS3***'s capacity.
 
 </td><td>
 
@@ -195,7 +202,7 @@ In this subsection, we describe the sparse alignment strategy as the foundation 
 Let’s first analyze the reasons behind the characteristics of different speech-text alignment modeling methods in depth.
 Implicitly modeling speech-text alignment is a relatively challenging task, which consequently leads to suboptimal speech intelligibility, particularly in hard cases.
 On the other hand, employing predefined hard alignment paths constrains the model's search space to produce more natural-sounding speech.
-The characteristics of these systems motivate us to design an approach that combines the advantages of both: we first provide a rough alignment to MegaTTS 3 and then use attention mechanisms in Transformer blocks to construct the fine-grained implicit alignment path.
+The characteristics of these systems motivate us to design an approach that combines the advantages of both: we first provide a rough alignment to ***MegaTTS3*** and then use attention mechanisms in Transformer blocks to construct the fine-grained implicit alignment path.
 The visualizations of the implicit alignment paths are included in Appendix~\ref{app:vis_diff_attn}.
 In specific, denote the latent speech vector sequence as $z=[z_1, z_2, \cdots, z_n]$, the phoneme sequence as $p=[p_1, p_2, \cdots, p_m]$, and the phoneme duration sequence as $d=[d_1, d_2, \cdots, d_m]$, where $n$, $m$ is the length of the sequence.
 The length of the speech vector that corresponds to a phoneme $p_i$ is the duration $d_i$.
@@ -203,8 +210,8 @@ Given $d=[2, 2, 3]$, the hard speech-text alignment path can be denoted as $a=[p
 To construct the rough alignment $\tilde{a}$, we randomly retain only one anchor for each phoneme: $\tilde{a} = [\underline{M}, p_1, p_2, \underline{M}, \underline{M}, \underline{M}, P_3]$, where $\underline{M}$ represents the mask token.
 $\tilde{a}$ is downsampled with convolution layers to match the length of the latent sequence $z$.
 Then, we directly concatenate the downsampled $\tilde{a}$ and $z$ along the channel dimension.
-The anchors in $\tilde{a}$ provide MegaTTS 3 with approximate positional information for each phoneme, simplifying the learning process of speech-text alignment.
-At the same time, the rough alignment information does not limit MegaTTS 3's search space and also enables fine-grained control over each phoneme's duration.
+The anchors in $\tilde{a}$ provide ***MegaTTS3*** with approximate positional information for each phoneme, simplifying the learning process of speech-text alignment.
+At the same time, the rough alignment information does not limit ***MegaTTS3***'s search space and also enables fine-grained control over each phoneme's duration.
 
 </td><td>
 
@@ -213,8 +220,8 @@ At the same time, the rough alignment information does not limit MegaTTS 3's sea
 
 **Piecewise Rectified Flow Acceleration**
 
-We adopt Piecewise Rectified Flow (PeRFlow)~\citep{yan2024perflow} to distill the pretrained MegaTTS 3 model into a more efficient generator.
-Although our MegaTTS 3 is non-autoregressive in terms of the time dimension, it requires multiple iterations to solve the Flow ODE.
+We adopt Piecewise Rectified Flow (PeRFlow)~\citep{yan2024perflow} to distill the pretrained ***MegaTTS3*** model into a more efficient generator.
+Although our ***MegaTTS3*** is non-autoregressive in terms of the time dimension, it requires multiple iterations to solve the Flow ODE.
 The number of iterations (i.e., number of function evaluations, NFE) has a great impact on inference efficiency, especially when the model scales up further.
 Therefore, we adopt the PeRFlow technique to further reduce NFE by segmenting the flow trajectories into multiple time windows.
 Applying reflow operations within these shortened time intervals, PeRFlow eliminates the need to simulate the full ODE trajectory for training data preparation, allowing it to be trained in real-time alongside large-scale real data during the training process.
@@ -223,11 +230,11 @@ Then, we randomly sample $k\in\{1,\cdots,K\}$ uniformly.
 We use the startpoint of the sampled time window $z_{t_{k-1}} = \sqrt{1 - \sigma^2(t_{k-1})} z_1 + \sigma(t_{k-1}) \epsilon$ to solve the endpoint of the time window $\hat{z}_{t_k} = \phi_{\theta}(z_{t_{k-1}}, t_{k-1}, t_{k})$, where $\epsilon \sim \mathcal{N}(0, I) $ is the random noise, $\sigma(t)$ is the noise schedule, and $\phi_{\theta}$ is the ODE solver of the teacher model.
 Since $z_{t_{k-1}}$ and $\hat{z}_{t_{k}}$ is available, the student model $\hat{\theta}$ can be trained via the following objectives:
 $$
-    \small
-    \ell = \left\lVert v_{\hat{\theta}}(z_t, t) - \frac{\hat{z}_{t_k} - z_{t_{k-1}}}{t_k - t_{k-1}} \right\lVert^2,
+\ell = \left\lVert v_{\hat{\theta}}(z_t, t) - \frac{\hat{z}_{t_k} - z_{t_{k-1}}}{t_k - t_{k-1}} \right\lVert^2,
 $$
+
 where $v_{\hat{\theta}}$ is the estimated drift force with parameter $\hat{\theta}$ and $t$ is uniformly sampled from $(t_{k-1},t_{k}]$.
-We provide details of PeRFlow training for MegaTTS 3 in Appendix~\ref{app:details_perflow_training}.
+We provide details of PeRFlow training for ***MegaTTS3*** in Appendix~\ref{app:details_perflow_training}.
 
 </td><td>
 
@@ -238,24 +245,24 @@ We provide details of PeRFlow training for MegaTTS 3 in Appendix~\ref{app:detail
 
 We employ classifier-free guidance approach~\citep{ho2022classifier} to steer the model $g_{\theta}$'s output towards the conditional generation $g_{\theta}(z_t,c)$ and away from the unconditional generation $g_{\theta}(z_t,\varnothing)$:
 $$
-    \small
-    \hat{g}_{\theta}(z_t, c) = g_{\theta}(z_t, \varnothing) + \alpha \cdot \left[ g_{\theta}(z_t, c) - g_{\theta}(z_t, \varnothing) \right],
+\hat{g}_{\theta}(z_t, c) = g_{\theta}(z_t, \varnothing) + \alpha \cdot \left[ g_{\theta}(z_t, c) - g_{\theta}(z_t, \varnothing) \right],
 $$
+
 where $c$ denotes the conditional state, $\varnothing$ denotes the unconditional state, and $\alpha$ is the guidance scale selected based on experimental results.
-Unlike standard classifier-free guidance, MegaTTS 3's conditional states $c$ consist of two components: phoneme embeddings $p$ and the speaker prompt $z_{prompt}$.
+Unlike standard classifier-free guidance, ***MegaTTS3***'s conditional states $c$ consist of two components: phoneme embeddings $p$ and the speaker prompt $z_{prompt}$.
 In the experiments, as the text guidance scale increases, we observe that the pronunciation changes according to the following pattern: 1) starting with improper pronunciation; 2) then shifting to pronouncing with the current speaker's accent; 3) and finally approaching the standard pronunciation of the target language.
 The detailed experimental setup is described in Appendix~\ref{app:additional_detials_for_mt_cfg}.
 This allows us to use the text guidance scale $\alpha_{txt}$ to control the accent intensity.
 At the same time, the speaker guidance scale $\alpha_{spk}$ should be a relatively high value to ensure a high speaker similarity.
 Therefore, we adopt the multi-condition classifier-free guidance technique to separately control $\alpha_{txt}$ and $\alpha_{spk}$:
 $$
-    \small
-    \begin{split}
-    \hat{g}_{\theta}(z_t, p, z_{prompt}) = & \alpha_{spk} \left[ g_{\theta}(z_t, p, z_{prompt}) - g_{\theta}(z_t, p, \varnothing) \right] \\
-    & + \alpha_{txt} \left[ g_{\theta}(z_t, p, \varnothing) - g_{\theta}(z_t, \varnothing, \varnothing) \right] \\
-    & + g_{\theta}(z_t, \varnothing, \varnothing) \\
-    \end{split}
+\begin{split}
+\hat{g}_{\theta}(z_t, p, z_{prompt}) = & \alpha_{spk} \left[ g_{\theta}(z_t, p, z_{prompt}) - g_{\theta}(z_t, p, \varnothing) \right] \\
+& + \alpha_{txt} \left[ g_{\theta}(z_t, p, \varnothing) - g_{\theta}(z_t, \varnothing, \varnothing) \right] \\
+& + g_{\theta}(z_t, \varnothing, \varnothing) \\
+\end{split}
 $$
+
 In training, we randomly drop condition $z_{prompt}$ with a probability of $p_{spk} = 0.10$.
 Only when $z_{prompt}$ is dropped, we randomly drop condition $p$ with a probability of 50\%.
 Therefore, our model is able to handle all three types of conditional inputs described in Equation~\ref{eq:5}.
@@ -279,7 +286,7 @@ We provide the model configuration and detailed hyper-parameter setting in Appen
 
 **Datasets**
 
-We train MegaTTS 3 on the LibriLight~\citep{kahn2020libri} dataset, which contains 60k hours of unlabeled speech derived from LibriVox audiobooks.
+We train ***MegaTTS3*** on the LibriLight~\citep{kahn2020libri} dataset, which contains 60k hours of unlabeled speech derived from LibriVox audiobooks.
 All speech data are sampled at 16KHz.
 We transcribe the speeches using an internal ASR system and extract the predefined speech-text alignment using the external alignment tool~\citep{mcauliffe2017montreal}.
 We utilize three benchmark datasets:
@@ -294,10 +301,10 @@ We utilize three benchmark datasets:
 
 **Training and Inference**
 
-We train the WaveVAE model and MegaTTS 3 on 8 NVIDIA A100 GPUs.
+We train the WaveVAE model and ***MegaTTS3*** on 8 NVIDIA A100 GPUs.
 The batch sizes, optimizer settings, and learning rate schedules are described in Appendix~\ref{app:model_config}.
-It takes 2M steps for the WaveVAE model's training and 1M steps for MegaTTS 3's training until convergence.
-The pre-training of MegaTTS 3 requires 800k steps and PeRFlow distillation requires 200k steps.
+It takes 2M steps for the WaveVAE model's training and 1M steps for ***MegaTTS3***'s training until convergence.
+The pre-training of ***MegaTTS3*** requires 800k steps and PeRFlow distillation requires 200k steps.
 
 </td><td>
 
@@ -340,7 +347,16 @@ We tell the testers to focus on one corresponding aspect and ignore the other as
 
 **Evaluation Baselines**
 
-We compare the zero-shot speech synthesis performance of MegaTTS 3 with 11 strong baselines, including: 1) VALL-E 2~\citep{chen2024vall}; 2) VoiceBox~\citep{le2023Voicebox}; 3) DiTTo-TTS~\citep{lee2024ditto}; 4) NaturalSpeech 3~\citep{ju2024naturalspeech}; 5) CosyVoice~\citep{du2024cosyvoice}; 6) MaskGCT~\citep{wang2024maskgct}; 7) F5-TTS~\citep{chen2024f5}; 8) E2 TTS~\citep{eskimez2024e2}.
+We compare the zero-shot speech synthesis performance of ***MegaTTS3*** with 11 strong baselines, including:
+(1) VALL-E 2~\citep{chen2024vall};
+(2) VoiceBox~\citep{le2023Voicebox};
+(3) DiTTo-TTS~\citep{lee2024ditto};
+(4) NaturalSpeech 3~\citep{ju2024naturalspeech};
+(5) CosyVoice~\citep{du2024cosyvoice};
+(6) MaskGCT~\citep{wang2024maskgct};
+(7) F5-TTS~\citep{chen2024f5};
+(8) E2 TTS~\citep{eskimez2024e2}.
+
 Explanation and details of the selected baseline systems are provided in Appendix~\ref{app:detail_zs_tts_baseline}.
 
 </td><td>
@@ -350,12 +366,12 @@ Explanation and details of the selected baseline systems are provided in Appendi
 
 **Analysis**
 
-As shown in Table~\ref{table:en_zs_tts}, we can see that 1) MegaTTS 3 achieves state-of-the-art SIM-O, SMOS, and WER scores, comparable to NaturalSpeech 3 (the counterpart with forced alignment), and significantly surpasses other baselines without explicit alignments.
+As shown in Table~\ref{table:en_zs_tts}, we can see that 1) ***MegaTTS3*** achieves state-of-the-art SIM-O, SMOS, and WER scores, comparable to NaturalSpeech 3 (the counterpart with forced alignment), and significantly surpasses other baselines without explicit alignments.
 The improved SIM-O and SMOS suggest that the proposed sparse alignment effectively simplifies the text-to-speech mapping challenge like predefined forced duration information, allowing the model to focus more on learning timbre information.
-And the improved WER indicates that MegaTTS 3 also enjoys strong robustness; 2) MegaTTS 3 significantly surpasses all baselines in terms of CMOS, demonstrating the effectiveness of the proposed sparse alignment strategy; 3) After the PeRFlow acceleration, the student model of MegaTTS 3 shows on par quality with the teacher model and enjoys fast inference speed.
+And the improved WER indicates that ***MegaTTS3*** also enjoys strong robustness; 2) ***MegaTTS3*** significantly surpasses all baselines in terms of CMOS, demonstrating the effectiveness of the proposed sparse alignment strategy; 3) After the PeRFlow acceleration, the student model of ***MegaTTS3*** shows on par quality with the teacher model and enjoys fast inference speed.
 We also conduct the experiments on the LibriSpeech-PC test-clean set provided by F5-TTS and the results are shown in Table~\ref{table:en_zs_tts_valle}, which also demonstrates that our method achieves state-of-the-art performance in terms of speaker similarity and speech intelligibility.
-The duration controllability of MegaTTS 3 is verified in Appendix~\ref{app:dur_contol}.
-In the demo page, we also demonstrate that our method can maintain high naturalness even when the performance of the duration predictor is suboptimal (while MegaTTS 3 with forced alignment fails).
+The duration controllability of ***MegaTTS3*** is verified in Appendix~\ref{app:dur_contol}.
+In the demo page, we also demonstrate that our method can maintain high naturalness even when the performance of the duration predictor is suboptimal (while ***MegaTTS3*** with forced alignment fails).
 
 </td><td>
 
@@ -382,16 +398,16 @@ Our method provides a noval and effective solution for speech synthesis applicat
 In this subsection, we evaluate the accented TTS performance of our model on the L2-ARCTIC dataset~\citep{zhao2018l2arctic}.
 This corpus includes recordings from non-native speakers of English whose first languages are Hindi, Korean, etc.
 In this experiment, we focus on verifying whether our model and baseline can synthesize natural speech with different accent types (standard English or English with specific accents) while maintaining consistent vocal timbre.
-We compare our MegaTTS 3 model with CTA-TTS~\citep{liu2024controllable}.
+We compare our ***MegaTTS3*** model with CTA-TTS~\citep{liu2024controllable}.
 More details of the baseline model are provided in Appendix~\ref{app:detail_accented_tts_experiment}.
 1) First, we evaluate whether the models can synthesize high-quality speeches with accents.
-As shown in Table~\ref{table:accent-tts-result}, our MegaTTS 3 model significantly outperforms the CTA-TTS baseline in terms of the subjective accent similarity MOS core, the MCD (dB) values, and the statistical moments ($\sigma$, $\gamma$, and $\kappa$) of pitch distributions.
-These results demonstrate the superior accent learning capability of MegaTTS 3 compared to the baseline system.
-Besides, the MegaTTS 3 model achieves higher CMOS and SMOS scores compared to CTA-TTS, indicating a significant improvement in speech quality and speaker similarity; 2) Secondly, we evaluate whether the models can accurately control the accent types of the generated speeches.
+As shown in Table~\ref{table:accent-tts-result}, our ***MegaTTS3*** model significantly outperforms the CTA-TTS baseline in terms of the subjective accent similarity MOS core, the MCD (dB) values, and the statistical moments ($\sigma$, $\gamma$, and $\kappa$) of pitch distributions.
+These results demonstrate the superior accent learning capability of ***MegaTTS3*** compared to the baseline system.
+Besides, the ***MegaTTS3*** model achieves higher CMOS and SMOS scores compared to CTA-TTS, indicating a significant improvement in speech quality and speaker similarity; 2) Secondly, we evaluate whether the models can accurately control the accent types of the generated speeches.
 We follow CTA-TTS to conduct the intensity classification experiment~\citep{liu2024controllable}.
 At
 run-time, we generate speeches with two accent types, and the listeners are instructed to classify the perceived accent categories, including ``standard'' and ``accented''.
-Figure~\ref{exp:accent_confusion_matrices} shows that our MegaTTS 3 significantly surpasses CTA-TTS in terms of accent controllability.
+Figure~\ref{exp:accent_confusion_matrices} shows that our ***MegaTTS3*** significantly surpasses CTA-TTS in terms of accent controllability.
 
 </td><td>
 
@@ -406,7 +422,7 @@ We report the objective metrics, including Perceptual Evaluation of Speech Quali
 We select the following codec models as baselines: 1) EnCodec~\citep{defossez2022high}, a representative and pioneering work in the field of speech codec; 2) DAC~\citep{kumar2024high}, a high-bitrate audio codec model with high reconstruction quality; 3) WavTokenizer~\citep{ji2024wavtokenizer}, a low-bitrate speech codec model that focuses more on perceptual reconstruction quality; 4) X-codec2~\citep{ye2025llasa}, a low-bitrate speech codec model, leveraging the representations of a pre-trained model to further enhance overall quality.
 The results demonstrates that, despite applying higher compression rate, our solution achieves superior performance on various reconstruction metrics, such as MCD and ViSQOL.
 
-Second, to demonstrate the impact of different speech compression models on the overall performance of the TTS system, we extracted the latents from Encodec and DAC, respectively, for training our MegaTTS 3 model.
+Second, to demonstrate the impact of different speech compression models on the overall performance of the TTS system, we extracted the latents from Encodec and DAC, respectively, for training our ***MegaTTS3*** model.
 We report the experimental results in Table~\ref{app:table_zs_tts_different_codec}.
 It can be seen that our method outperforms ``w/ DAC'' and ``w/ Encodec'', due to the fact that the latent space of our speech compression model is more compact (only 25 tokens per second).
 The results demonstrate the importance of our WaveVAE, a high-compression, high-reconstruction-quality speech codec model, for TTS systems.
@@ -420,15 +436,15 @@ This conclusion is also verified by a previous work~\citep{lee2024ditto}, which 
 
 <table><tr><td width="50%">
 
-We test the following four settings: 1) \textit{w/ FA}, which replaces the sparse alignment in MegaTTS 3 with forced alignment used in ~\citep{le2023Voicebox,shen2023naturalspeech}; 2) \textit{w/o A.}, we do not use the predefined alignments and modeling the duration information implicitly; 3) \textit{w/ CFG}, we use the standard CFG following the common practice in Diffusion-based TTS; 4) \textit{w/o CFG}, we do not use the CFG mechanism.
+We test the following four settings: 1) \textit{w/ FA}, which replaces the sparse alignment in ***MegaTTS3*** with forced alignment used in ~\citep{le2023Voicebox,shen2023naturalspeech}; 2) \textit{w/o A.}, we do not use the predefined alignments and modeling the duration information implicitly; 3) \textit{w/ CFG}, we use the standard CFG following the common practice in Diffusion-based TTS; 4) \textit{w/o CFG}, we do not use the CFG mechanism.
 All tests follow the experimental setup described in Section~\ref{exp_zero-shot}.
 The results are shown in Table~\ref{table:ablation_alignments_cfg}.
 For settings 1) and 2), it can be observed that both forced alignment and sparse alignment can enhance the performance of speech synthesis models.
 However, compared to forced alignment, sparse alignment does not constrain the model's search space, leading to a prosodic naturalness (see Section~\ref{exp:prosodic_naturalness}).
 Therefore, the sparse alignment strategy achieves $+0.17$ CMOS compared to the forced alignment strategy.
 For setting 3), compared with the standard CFG, our multi-condition CFG performs slightly better as it allows for flexible control over the weights between the text prompt and the speaker prompt.
-Setting 4) proves that the CFG mechanism is crucial for MegaTTS 3.
-Additionally, we visualize the attention score matrices from different transformer layers in MegaTTS 3 in Appendix~\ref{app:vis_diff_attn}, leading to some interesting observations.
+Setting 4) proves that the CFG mechanism is crucial for ***MegaTTS3***.
+Additionally, we visualize the attention score matrices from different transformer layers in ***MegaTTS3*** in Appendix~\ref{app:vis_diff_attn}, leading to some interesting observations.
 
 </td><td>
 
@@ -438,10 +454,10 @@ Additionally, we visualize the attention score matrices from different transform
 
 <table><tr><td width="50%">
 
-In this paper, we introduce MegaTTS 3, a zero-shot TTS framework that leverages novel sparse alignment boundaries to ease the difficulty of alignment learning while retaining the naturalness of the generated speeches.
-This strategy allows MegaTTS 3 to combine the strengths of methods with both implicit alignments and predefined hard alignments.
+In this paper, we introduce ***MegaTTS3***, a zero-shot TTS framework that leverages novel sparse alignment boundaries to ease the difficulty of alignment learning while retaining the naturalness of the generated speeches.
+This strategy allows ***MegaTTS3*** to combine the strengths of methods with both implicit alignments and predefined hard alignments.
 Additionally, we employ the PeRFlow technique to further accelerate the generation process and design a multi-condition CFG strategy to offer more flexible control over accents.
-Experimental results show that MegaTTS 3 achieves state-of-the-art zero-shot TTS speech quality while maintaining a more efficient pipeline.
+Experimental results show that ***MegaTTS3*** achieves state-of-the-art zero-shot TTS speech quality while maintaining a more efficient pipeline.
 Moreover, the sparse alignment strategy also shows enhanced prosodic naturalness and higher robustness against a suboptimal duration predictor.
 Due to space constraints, further discussions are provided in the appendix.
 
