--- a/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
+++ b/Models/Tokenizers/2025.06.29_XY-Tokenizer.md
@@ -456,3 +456,8 @@ Additionally, the scaling law for training speech codecs, particularly with resp
 [^Kumar2023DAC]: [DAC](2023.06.11_Descript-Audio-Codec.md)
 [^Zhang2024SpeechTokenizer]: [SpeechTokenizer](../SpeechCodec/2023.08.31_SpeechTokenizer.md)
 [^Xin2024BigCodec]: [BigCodec](../SpeechCodec/2024.09.09_BigCodec.md)
+[^Wang2023VALL-E]: [VALL-E](../SpeechLM/ST2S/2023.01.05_VALL-E.md)
+[^Devlin2019BERT]: [BERT](../TextLM/2018.10.11_BERT.md)
+[^Hsu2021HuBERT]: [HuBERT](../SpeechRepresentation/2021.06.14_HuBERT.md)
+[^Chung2021W2V-BERT]: [W2V-BERT](../SpeechRepresentation/2021.08.07_W2V-BERT.md)
+[^Chen2022WavLM]: [WavLM](../SpeechRepresentation/2021.10.26_WavLM.md)
